--- a/data/tabular/formation_energies/meta.yaml
+++ b/data/tabular/formation_energies/meta.yaml
@@ -66,3 +66,17 @@ templates:
     - |-
       User: I want to design a stability#not &NULL}thermodynamically stable {#material|structure|compound|!} What {#chemical formula|composition!} should I use?
       Assistant: {#I recommend using |I suggest using |I would use |I would recommend using!}{composition#}.
+    - |-
+      User: I want to design a {#material|structure|compound|!} that is {stability#not &NULL}thermodynamically stable. What {#chemical formula|composition!} should I use?
+      Assistant: {#Do you have|Are there!} any other {#requirements|constraints|preferences|!}?
+      User: The {#material|structure|compound|!} should have a decomposition enthalpy of {Ed#} {Ed__units}.
+      Assistant: {#I recommend using |I suggest using |I would use |I would recommend using!}{composition#}.
+    - |-
+      User: I want to design a {#material|structure|compound|!} that is {stability#not &NULL}thermodynamically stable. What {#chemical formula|composition!} should I use?
+      Assistant: {#Do you have|Are there!} any other {#requirements|constraints|preferences|!}?
+      User: The {#material|structure|compound|!} should have a formation enthalpy of {Ef#} {Ef__units}.
+      Assistant: {#I recommend using |I suggest using |I would use |I would recommend using!}{composition#}.
+    - |- 
+      Task: Classify the stability of {composition#}.
+      Constraint: Give a reason for your answer.
+      Answer: {#The material is |The compound is |The crystal is |The solid is |!}{stability#not &NULL}thermodynamically stable because its decomposition enthalpy is {Ed#} {Ed__units}.
