start adding formation energy (#428)

--- a/data/tabular/melting_points/meta.yaml
+++ b/data/tabular/melting_points/meta.yaml
@@ -1,19 +1,19 @@
 ---
-name: perovskite_db
+name: melting_points
 description: |-
     Literature mined data on melting points of organic compounds.
 targets:
     - id: mp
       description: mean melting point
       units: deg C
-      type: continous
+      type: continuous
       names:
           - noun: mean melting point
       uris:
     - id: mp_range
       description: melting point range
       units: deg C
-      type: continous
+      type: continuous
       names:
           - noun: melting point range
 benchmarks: []
