--- a/data/tabular/oqmd/meta.yaml
+++ b/data/tabular/oqmd/meta.yaml
@@ -4,54 +4,57 @@ description: |-
     Open Quantum Materials Database (OQMD) is a database of DFT-computed thermodynamic and structural properties of materials.
     We used a compilation of a prior version of this database.
 targets:
-  - id: spacegroup
-    description: space group number 
-    type: integer 
-    names:
-      - noun: number index of the space group
-      - noun: space group number
-  - id: energy_per_atom
-    type: continuos
-    units: eV
-    significant_digits: 4
-    names: 
-      - noun: energy per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
-      - noun: energy per atom computed using the PBE GGA functional
-  - id: formation_energy_per_atom
-    type: continuos
-    units: eV
-    significant_digits: 4
-    names: 
-      - noun: formation energy per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
-      - noun: formation energy per atom computed using the PBE GGA functional
-  - id: band_gap
-    type: continuos
-    units: eV
-    significant_digits: 4
-    names: 
-      - noun: band gap computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
-      - noun: band gap computed using the PBE GGA functional
-      - noun: PBE-computed band gap
-  - id: volume_per_atom
-    type: continuos
-    units: \AA^3
-    significant_digits: 4
-    names: 
-      - noun: volume per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
-      - noun: volume per atom computed using the PBE GGA functional
-  - id: magnetization_per_atom
-    type: continuos
-    units: mu B
-    significant_digits: 4
-    names: 
-      - noun: magnetization per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
-      - noun: magnetization per atom computed using the PBE GGA functional
+    - id: spacegroup
+      description: space group number
+      type: integer
+      names:
+          - noun: number index of the space group
+          - noun: space group number
+          - noun: space group
+    - id: energy_per_atom
+      type: continuous
+      units: eV / atom
+      significant_digits: 4
+      names:
+          - noun: energy per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
+          - noun: energy per atom computed using the PBE GGA functional
+    - id: formation_energy_per_atom
+      type: continuos
+      units: eV / atom
+      significant_digits: 4
+      names:
+          - noun: formation energy per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
+          - noun: formation energy per atom computed using the PBE GGA functional
+    - id: band_gap
+      type: continuous
+      units: eV
+      significant_digits: 4
+      names:
+          - noun: band gap computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
+          - noun: band gap computed using the PBE GGA functional
+          - noun: PBE-computed band gap
+    - id: volume_per_atom
+      type: continuous
+      units: \AA^3
+      significant_digits: 4
+      names:
+          - noun: volume per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
+          - noun: volume per atom computed using the PBE GGA functional
+    - id: magnetization_per_atom
+      type: continuous
+      units: \mu B
+      significant_digits: 4
+      names:
+          - noun: magnetization per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
+          - noun: magnetization per atom computed using the PBE GGA functional
 identifiers:
     - id: name
       description: OQMD identifier
-      sample: False
+      sample: false
+      type: Other
     - id: formula
       description: composition
+      type: COMPOSITION
 license: CC-BY 4.0
 num_points: 561882
 links:
@@ -61,12 +64,12 @@ links:
       description: original data source
 bibtex:
     - |-
-       @article{yamamoto2019crystal,
-        title={Crystal graph neural networks for data mining in materials science},
-        author={Yamamoto, Takenori},
-        journal={Research Institute for Mathematical and Computational Sciences, LLC},
-        year={2019}
-        }
+      @article{yamamoto2019crystal,
+       title={Crystal graph neural networks for data mining in materials science},
+       author={Yamamoto, Takenori},
+       journal={Research Institute for Mathematical and Computational Sciences, LLC},
+       year={2019}
+       }
     - |-
       @article{kirklin2015open,
         title={The Open Quantum Materials Database (OQMD): assessing the accuracy of DFT formation energies},
@@ -77,15 +80,64 @@ bibtex:
         pages={1--15},
         year={2015},
         publisher={Nature Publishing Group}
-      }
+      }{spa}
 templates:
-  - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap} {band_gap__units}.
-  - The {#material|compound|structure!} with composition {formula#} and {spacegroup_names__noun} has a {band_gap__names__noun} of {band_gap} {band_gap__units}.
-  - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap} {band_gap__units} and a {energy_per_atom__names__noun} of {energy_per_atom} {energy_per_atom__units}.
-  - The {#material|compound|structure!} with composition {formula#} and {spacegroup_names__noun} has a {band_gap__names__noun} of {band_gap} {band_gap__units} and a {magntization_per_atom__names__noun} of {magnetization_per_atom} {magnetization_per_atom__units}.
-  - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap} {band_gap__units} and a {volume_per_atom__names__noun} of {volume_per_atom} {volume_per_atom__units}.
-  - The {#material|compound|structure!} with composition {formula#} {#can be found|occurs|crystallizes!} in the {spacegroup_names__noun} space group.
-  - The {#material|compound|structure!} with composition {formula#} {#can be found|occurs|crystallizes!} in the {spacegroup_names__noun} space group and has a {band_gap__names__noun} of {band_gap} {band_gap__units}.
-  - |- 
-    Question: What is the {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#}?
-    Answer: 
+    - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+    - The {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+    - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {energy_per_atom__names__noun}
+      of {energy_per_atom#} {energy_per_atom__units}.
+    - The {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units}
+      and a {magnetization_per_atom__names__noun} of {magnetization_per_atom#} {magnetization_per_atom__units}.
+    - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {volume_per_atom__names__noun}
+      of {volume_per_atom#} {volume_per_atom__units}.
+    - The {#material|compound|structure!} with composition {formula#} {#can be found|occurs|crystallizes!} in the {spacegroup__names__noun} {spacegroup#}.
+    - The {#material|compound|structure!} with composition {formula#} {#can be found|occurs|crystallizes!} in the {spacegroup__names__noun} {spacegroup#} and
+      has a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+    - |-
+      Question: What is the {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#}?
+      Answer: The {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#} is {band_gap#} {band_gap__units}.
+    - |-
+      Question: What is the {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#}?
+      Answer: The {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} is {band_gap#} {band_gap__units}.
+    - |-
+      Question: What is the {volume_per_atom__names__noun} of the {#material|compound|structure!} with composition {formula#}?
+      Answer: The {volume_per_atom__names__noun} of the {#material|compound|structure!} with composition {formula#} is {volume_per_atom#} {volume_per_atom__units}.
+    - |-
+      Question: What is the {formation_energy_per_atom__names__noun} of the {#material|compound|structure!} with composition {formula#}?
+      Answer: The {formation_energy_per_atom__names__noun} of the {#material|compound|structure!} with composition {formula#} is {formation_energy_per_atom#} {formation_energy_per_atom__units}.
+    - |-
+      Question: What is the {magnetization_per_atom__names__noun} of the {#material|compound|structure!} with composition {formula#}?
+      Answer: The {magnetization_per_atom__names__noun} of the {#material|compound|structure!} with composition {formula#} is {magnetization_per_atom#} {magnetization_per_atom__units}.
+    - |-
+      User: {#I am looking for|I need!} a {#material|compound|structure!} with a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+      Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
+      User: I would like it to have a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}.
+      Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
+      User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {spacegroup#}.
+      Assistant: {#Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
+    - |-
+      User: {#I am looking for|I need!} a {#material|compound|structure!} with a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+      Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
+      User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {space group#}.
+      Assistant: {#Great|Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
+    - |-
+      User: {#I am looking for|I need!} a {#material|compound|structure!} with a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}.
+      Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
+      User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {space group#}.
+      Assistant: {#Great|Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
+    - |-
+      User: {#I am looking for|I need!} a {#material|compound|structure!} with a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+      Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
+      User: {#No|Nope|None|Nothing|No other constraints|No other requirements|No other needs!}
+      Assistant: {#Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {space group#}.
+    - |-
+      User: {#I want to design|I need to design|I need a!} material with a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}, {#what should I do?|what should I do?|what do you suggest?|what do you recommend?}
+      Assistant: {#I found|Here is|I have found|Here is!} a {#material|compound|structure!} with a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}: {formula#}.
+    - |-
+      Task: Predict a property of a material based on the description of the material.
+      Description: Predict the {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#}.
+      Result: {band_gap#} {band_gap__units}
+    - |-
+      Task: Predict a property of a material based on the description of the material.
+      Description: Predict the {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} and a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}.
+      Result: {band_gap#} {band_gap__units}
