--- a/data/tabular/oqmd/meta.yaml
+++ b/data/tabular/oqmd/meta.yaml
@@ -17,6 +17,7 @@ targets:
       names:
           - noun: energy per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
           - noun: energy per atom computed using the PBE GGA functional
+          - noun: energy per atom computed using PAW-PBE
     - id: formation_energy_per_atom
       type: continuous
       units: eV / atom
@@ -24,6 +25,7 @@ targets:
       names:
           - noun: formation energy per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
           - noun: formation energy per atom computed using the PBE GGA functional
+          - noun: formation energy per atom computed using PAW-PBE
     - id: band_gap
       type: continuous
       units: eV
@@ -32,6 +34,8 @@ targets:
           - noun: band gap computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
           - noun: band gap computed using the PBE GGA functional
           - noun: PBE-computed band gap
+          - noun: PAW-PBE-computed band gap
+          - noun: band gap computed using PAW-PBE
     - id: volume_per_atom
       type: continuous
       units: \AA^3 / atom
@@ -39,6 +43,7 @@ targets:
       names:
           - noun: volume per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
           - noun: volume per atom computed using the PBE GGA functional
+          - noun: volume per atom computed using PAW-PBE
     - id: magnetization_per_atom
       type: continuous
       units: \mu B
@@ -46,6 +51,7 @@ targets:
       names:
           - noun: magnetization per atom computed using DFT (with the PAW method as implemented in VASP) using the PBE functional
           - noun: magnetization per atom computed using the PBE GGA functional
+          - noun: magnetization per atom computed using PAW-PBE
 identifiers:
     - id: name
       description: OQMD identifier
@@ -82,16 +88,17 @@ bibtex:
       }{spa}
 templates:
     - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
-    - The {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+    - The {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} has a {band_gap__names__noun} of {band_gap#}
+      {band_gap__units}.
     - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {energy_per_atom__names__noun}
       of {energy_per_atom#} {energy_per_atom__units}.
-    - The {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units}
-      and a {magnetization_per_atom__names__noun} of {magnetization_per_atom#} {magnetization_per_atom__units}.
+    - The {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#} has a {band_gap__names__noun} of {band_gap#}
+      {band_gap__units} and a {magnetization_per_atom__names__noun} of {magnetization_per_atom#} {magnetization_per_atom__units}.
     - The {#material|compound|structure!} with composition {formula#} has a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {volume_per_atom__names__noun}
       of {volume_per_atom#} {volume_per_atom__units}.
     - The {#material|compound|structure!} with composition {formula#} {#can be found|occurs|crystallizes!} in the {spacegroup__names__noun} {spacegroup#}.
-    - The {#material|compound|structure!} with composition {formula#} {#can be found|occurs|crystallizes!} in the {spacegroup__names__noun} {spacegroup#} and
-      has a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
+    - The {#material|compound|structure!} with composition {formula#} {#can be found|occurs|crystallizes!} in the {spacegroup__names__noun} {spacegroup#}
+      and has a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
     - |-
       Question: What is the {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#}?
       Answer: The {band_gap__names__noun} of the {#material|compound|structure!} with composition {formula#} is {band_gap#} {band_gap__units}.
@@ -113,24 +120,24 @@ templates:
       User: I would like it to have a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}.
       Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
       User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {spacegroup#}.
-      Assistant: {#Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
+      Assistant: {#Okay|In this case|In that case!}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
     - |-
       User: {#I am looking for|I need!} a {#material|compound|structure!} with a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
       Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
-      User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {space group#}.
-      Assistant: {#Great|Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
+      User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {spacegroup#}.
+      Assistant: {#Great|Okay|In this case|In that case!}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
     - |-
       User: {#I am looking for|I need!} a {#material|compound|structure!} with a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}.
       Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
-      User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {space group#}.
-      Assistant: {#Great|Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
+      User: I would like it to {#crystallize|occur|be found!} in the {spacegroup__names__noun} {spacegroup#}.
+      Assistant: {#Great|Okay|In this case|In that case!}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#}.
     - |-
       User: {#I am looking for|I need!} a {#material|compound|structure!} with a {band_gap__names__noun} of {band_gap#} {band_gap__units}.
       Assistant: {#Do you have other constraints?|Are there are requirements?|Is there anything else you need the compound to have?!}
       User: {#No|Nope|None|Nothing|No other constraints|No other requirements|No other needs!}
-      Assistant: {#Okay|In this case|In that case}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {space group#}.
+      Assistant: {#Okay|In this case|In that case!}, I {#recommend|suggest!} the {#material|compound|structure!} with composition {formula#} and {spacegroup__names__noun} {spacegroup#}.
     - |-
-      User: {#I want to design|I need to design|I need a!} material with a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}, {#what should I do?|what should I do?|what do you suggest?|what do you recommend?}
+      User: {#I want to design|I need to design|I need a!} material with a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}, {#what should I do?|what should I do?|what do you suggest?|what do you recommend?!}
       Assistant: {#I found|Here is|I have found|Here is!} a {#material|compound|structure!} with a {band_gap__names__noun} of {band_gap#} {band_gap__units} and a {volume_per_atom__names__noun} of {volume_per_atom#} {volume_per_atom__units}: {formula#}.
     - |-
       Task: Predict a property of a material based on the description of the material.
