--- a/data/tabular/opv/meta.yaml
+++ b/data/tabular/opv/meta.yaml
@@ -57,6 +57,24 @@ targets:
           - noun: bandgap
       uris:
       significant_digits: 2
+    - id: HOMO
+      description: HOMO of the system, measured experimentally 
+      type: continuous 
+      units: eV
+      significant_digits: 2
+      names: 
+        - highest-occupied molecular orbital energy 
+        - HOMO energy 
+        - highest-occupied molecular orbital (HOMO) energy 
+    - id: LUMO 
+      description: LUMO of the system, measured experimentally 
+      type: continuous 
+      units: eV
+      significant_digits: 2
+      names: 
+        - lowest-unoccupied molecular orbital energy 
+        - LUMO energy 
+        - lowest-unoccupied molecular orbital (LUMO) energy 
 benchmarks: []
 links: 
   - url: https://pubs.acs.org/doi/full/10.1021/acs.jpclett.8b00635
@@ -91,8 +109,36 @@ bibtex:
       }
 templates:
   - |- 
-    Question: What is the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+    Question: What is the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
     Answer: {#The power conversion efficiency is |The PCE is!}{PCE_ave#} %.
   - |-
-    Question: What is the {Voc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
-    Answer: {#The open-circuit voltage is |The Voc is!}{Voc#} V.
+    Question: What is the {Voc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+    Answer: {#The open-circuit voltage is |The Voc is!}{Voc#} {Voc__units}.
+  - |-
+    Question: What is the {Jsc__names_noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+    Answer: {#The short-circuit current density is |The Jsc is!}{Jsc#} {Jsc__units}.
+  - |-
+    Question: What is the {FF__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+    Answer: {#The fill factor is |The FF is!}{FF#} {FF__units}.
+  - |-
+    Question: What is the {bandgap__names__noun} of a polymer with monomer SMILES {SMILES#}?
+    Answer: {#The bandgap is |The bandgap of the polymer is!}{bandgap#} {bandgap__units}.
+  - |-
+    Question: What is the {HOMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
+    Answer: The {HOMO__names__noun} {#of the polymer|!} is {HOMO#} {HOMO__units}.
+  - |- 
+    Question: What is the {LUMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
+    Answer: The {LUMO__names__noun} {#of the polymer|!} is {LUMO#} {LUMO__units}.
+  - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#} has a {PCE__names__noun} of {PCE#}%.
+  - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#} has a {Jsc__names__noun} of {Jsc} {Jsc__units}.
+  - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#} has a {FF__names__noun} of {FF}.
+  - |- 
+    User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE__names__noun} of {PCE#}%. 
+    Assistant: {#That's interesting.|Cool.|!} Do you have a donor polymer in mind?
+    User: Yes, I would like to use a polymer with monomer SMILES {SMILES#} and {#would like to|need to|must!} know the {PDIs__names__noun} and {MWs__names__noun} of the polymer I should use.
+    Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#}.
+  - |-
+    User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE__names__noun} of {PCE#}%. 
+    Assistant: {#That's interesting.|Cool.|!} Do you have additional constraints?
+    User: {#Yes, |Yeah, |Indeed, |!}I would like to have a {Jsc__names__noun} of {Jsc#} {Jsc__units}.
+    Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer SMILES {SMILES#}.
